--- a/src/components/topContainer/topcontent/topContent.css
+++ b/src/components/topContainer/topcontent/topContent.css
@@ -1,3 +1,63 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap");
 .topContent {
-  background-color: red;
+  color: white;
+  position: relative;
+}
+.topContent-container {
+  position: absolute;
+  top: 250px;
+  right: 150px;
+  padding: 10px;
+}
+.topContent-container > p {
+  letter-spacing: 1px;
+  text-align: left;
+  padding: 20px 0 0 3px;
+  font-weight: 600;
+  font-size: 20px;
+}
+.topContent-container > a > button {
+  border: none;
+  text-align: left;
+  margin: 20px 6px 30px 5px;
+  border-radius: 3px;
+}
+
+.topContent-container > h1 {
+  font-size: 50px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.topContent-downlod-btn {
+  color: #000000;
+  background-color: #61dbfb;
+  font-size: 14px;
+  padding: 10px 30px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  cursor: pointer;
+  margin-right: 20px;
+}
+.topContent-work-btn {
+  color: #ffffff;
+  border: 1px solid #ffffff !important;
+  background-color: transparent;
+  font-size: 14px;
+  padding: 9px 45px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.topContent-work-btn:hover {
+  background-color: #ffffff;
+  color: #000000;
+  font-weight: 600;
+  transform: translateX(3px);
+}
+.topContent-downlod-btn:hover {
+  background-color: #ffffff;
+  color: #000000;
+  font-weight: 600;
+  transform: translateX(3px);
 }
